--- a/papers/FEM/FEM.tex
+++ b/papers/FEM/FEM.tex
@@ -1,4 +1,4 @@
-\chapter{Phase Field Modeling with the Finite Elements Method \label{sec:FEM}}
+\chapter{Phase Field Modeling with the Finite Elements Method \label{ch:FEM}}
 In light of trying to be self-contained, we will give a short introduction into the methods used in simulating phase field models.
 The Finite Element Method constitutes a big part in these simulations, thus, in light of making this Thesis relatively self-contained, we give a short introduction to the topic based on Ref.~\cite{Biner}.
 \begin{figure}
