--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -635,7 +635,7 @@ During the second cycle the same consideration leads to the further positive rot
 
 \begin{figure}[b]
 	\IncludeGraphics[width=0.9\columnwidth]{simplified_model.png}
-	\caption{\label{fig:GdMn2O5_simple_model}{\bf Spins in the simplified model.} The zero field configuration of the spins that perform the full rotation (360$^\circ$), used in the simplified model \eqref{eq:GdMn2O5_simple_model}, and indicated by the arrows.  Due to the symmetry of the model and the geometry, the two clusters are copies of eachother, allowing the model to focus on the top right set, encased in the red box.}
+	\caption{\label{fig:GdMn2O5_simple_model}{\bf Spins in the simplified model.} The zero field configuration of the spins that perform the full rotation (360$^\circ$), used in the simplified model \eqref{eq:GdMn2O5_simple_model}, and indicated by the arrows. Spins $S_6$ and $S_7$ are translated by $b$ and $2a$, respectively, from their original position in the second half of the cell for clarity. Due to the symmetry of the model and the geometry, the two clusters are copies of eachother, allowing the model to focus on the top right set, encased in the red box.}
 \end{figure}
 
 \section{Conclusions}
