--- a/papers/Introduction/Introduction.tex
+++ b/papers/Introduction/Introduction.tex
@@ -71,7 +71,7 @@ Surprisingly, these walls appear mechanically softer to an applied tip, even tho
 Indeed, in ferroelastic domain walls one domain would be favored over the other by the force applied through the tip, meaning that when the tip is applied to the wall, it would excite a soft sliding domain wall mode.
 This mode is not present in either of the ferroelastic domains and thus the ferroelastic domain wall would appear softer.
 In our case, however, we uncover that a similar spirited but fundamentally different mechanism lies at the heart of the mechanical softness in these purely ferroelectric 180$^\circ$ domain walls.
-Even though they are not ferroelastic, we find that a an associated, relatively long ranged, strain texture still appears around them, which interacts mechanically with the applied tip.
+Even though they are not ferroelastic, we find that a relatively long ranged strain texture still appears around them, which interacts mechanically with the applied tip.
 This in turn leads to a bending or sliding of the domain wall towards the tip, leading to a large deformation and thus an apparent softening.
 
 Seen as certain ferroelectric domain walls are conductive, this could open the door to the efficient manipulation of conducting channels through the application of strain, which could be used in electronic devices.
